{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 16,
  "lineage": "d29d5dd6-f861-1573-b40c-701d9b01922a",
  "resources": [
    {
      "module": "module.mywebserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f6f58b29c9f73258",
            "arn": "arn:aws:ec2:ap-south-1:002232029792:instance/i-0207b6909738a286c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0207b6909738a286c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-instance-web-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041f266e7cc4ac91c",
            "private_dns": "ip-192-168-100-245.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.100.245",
            "public_ip": "13.127.31.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-036c2c14e8692646e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01453e7250080716c",
            "tags": {
              "OS": "amazon",
              "env": "test"
            },
            "tags_all": {
              "OS": "amazon",
              "env": "test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0481023a29bacc78e"
            ]
          },
          "dependencies": [
            "module.mywebserver.aws_key_pair.my-instance-key",
            "module.mywebserver.aws_security_group.dev-vpc-sg",
            "module.mywebserver.aws_subnet.my-vpc-subnet",
            "module.mywebserver.aws_vpc.myvpc",
            "module.mywebserver.data.aws_ami.myamis",
            "module.mywebserver.tls_private_key.my-key-mangesh"
          ]
        }
      ]
    },
    {
      "module": "module.mywebserver",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myvpc-internet-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:002232029792:internet-gateway/igw-009e92f8120b25809",
            "id": "igw-009e92f8120b25809",
            "owner_id": "002232029792",
            "vpc_id": "vpc-07cea4339268ce2af"
          },
          "dependencies": [
            "module.mywebserver.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mywebserver",
      "mode": "managed",
      "type": "aws_route",
      "name": "my-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-009e92f8120b25809",
            "id": "r-rtb-0a69826bab9396ccb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a69826bab9396ccb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mywebserver.aws_internet_gateway.myvpc-internet-igw",
            "module.mywebserver.aws_route_table.myvpc-route-table",
            "module.mywebserver.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mywebserver",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myvpc-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:002232029792:route-table/rtb-0a69826bab9396ccb",
            "id": "rtb-0a69826bab9396ccb",
            "owner_id": "002232029792",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07cea4339268ce2af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mywebserver.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mywebserver",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myvpc-route-table-associatation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0720cec3c53308e62",
            "route_table_id": "rtb-0a69826bab9396ccb",
            "subnet_id": "subnet-01453e7250080716c"
          },
          "dependencies": [
            "module.mywebserver.aws_route_table.myvpc-route-table",
            "module.mywebserver.aws_subnet.my-vpc-subnet",
            "module.mywebserver.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mywebserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:002232029792:security-group/sg-0481023a29bacc78e",
            "description": "Dev VPC Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0481023a29bacc78e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-vpc-default-sg",
            "name_prefix": "",
            "owner_id": "002232029792",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07cea4339268ce2af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mywebserver.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mywebserver",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-vpc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:002232029792:subnet/subnet-01453e7250080716c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01453e7250080716c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "002232029792",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07cea4339268ce2af"
          },
          "dependencies": [
            "module.mywebserver.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mywebserver",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:002232029792:vpc/vpc-07cea4339268ce2af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.100.0/24",
            "default_network_acl_id": "acl-08a0e62c11dc661cf",
            "default_route_table_id": "rtb-0e8d9af1c77869b75",
            "default_security_group_id": "sg-0d8ecbc9ce872631b",
            "dhcp_options_id": "dopt-01431bfa756b4ac1d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07cea4339268ce2af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8d9af1c77869b75",
            "owner_id": "002232029792",
            "tags": {
              "name": "dev"
            },
            "tags_all": {
              "name": "dev"
            }
          }
        }
      ]
    }
  ]
}